<resources>
    <string name="app_name">West Hall Map</string>
    <string name="overview_west_hall">Overview- West Hall</string>
    <string name="_1st_floor">1st Floor</string>
    <string name="_2nd_floor">2nd Floor</string>
    <string name="_3rd_floor">3rd Floor</string>
    <string name="about">About</string>
    <string name="first_floor">First Floor</string>
    <string name="second_floor">Second Floor</string>
    <string name="campus_map">Campus Map</string>
    <string name="third_floor">Third Floor</string>
    <string name="created_fall_2019">Created Fall Semester 2019</string>
    <string name="by_general_grizzly_agapitus_iboro">By General Grizzly (Agapitus Iboro)</string>
    <string name="created_for_itec_4550">Created For ITEC 4550</string>
</resources>
